2001-04-17  Alexander V. Lukyanov  <lav@yars.free.net>

	* MirrorJob.cc, mkdirJob.cc, StatusLine.cc: fix overflows.

2001-04-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* Fish.cc, SleepJob.cc, ftpclass.cc: move CDECL to modconfig.h.
	* FtpListInfo.cc: set tm_isdst to -1 (automatic DST).
	* Http.cc: don't add extra / to Referer.
	* Makefile.am: use libtool to build modules; libnetwork.so.
	* MirrorJob.cc: remove unneeded N_.
	* ResMgr.cc, ResMgr.h: add dtor for ResDecl.
	* Resolver.cc, Resolver.h: move resources to resource.cc;
	  remove ClassInit.
	* SMTask.cc, SMTask.h: add DeleteAll method.
	* buffer.cc, buffer.h: move IOBufferSSL to separate files.
	* buffer_ssl.cc, buffer_ssl.h: new files.
	* lftp_ssl.h: add ifdef USE_SSL.
	* log.cc: automatically init Log::global.
	* modconfig.h: add MODULE_NETWORK; prototype for module_init.
	* resource.cc: move resources from Resolver.cc here.

2001-03-22  Alexander V. Lukyanov  <lav@yars.free.net>

	* Resolver.cc: set default for dns:cache-expire to 1h.

2001-03-20  Alexander V. Lukyanov  <lav@yars.free.net>

	* keyvalue.cc: ignore certain lock errors.
	* Makefile.am: install modules into pkglibdir/version dir.
	* resource.cc, Http.cc: http:referer, hftp:use-type new settings.

2001-03-13  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: add \n to connect: message.
	* HttpDir.cc: do Exclude.
	* commands.cc: update help for `module'.
	* module.cc: search modules in module:path.
	* resource.cc: init module:path from env LFTP_MODULE_PATH.

2001-03-13  Arkadiusz Miskiewicz <misiek@pld.org.pl>

	* Job.cc, Job.h: undef printf (for new glibc).

2001-03-13  Glenn F. Maynard <glenn@zewt.org>

	* CmdExec.cc, CmdExec.h, StatusLine.cc, StatusLine.h: support for
	  terminal titlebar.

2001-02-23  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc: (MakePrompt) fix \NNN recognition (reported by
	  Glenn F. Maynard)

2001-02-13  Alexander V. Lukyanov  <lav@yars.free.net>

	* HttpDir.cc: accept perms string 11 char long.