@@ -25,6 +25,7 @@
 #include <readline/readline.h>
 #include <readline/history.h>
 #include "lftp_rl.h"
+#include "xalloca.h"
 
 void lftp_add_history_nodups(const char *cmd_buf)
 {
@@ -43,7 +44,7 @@ char *lftp_readline(const char *prompt)
 
 int lftp_history_expand(const char *what, char **where)
 {
-   return history_expand(what,where);
+   return history_expand((char*)what,where);
 }
 
 static int is_clear=0;
@@ -77,4 +78,50 @@ void lftp_rl_redisplay_maybe()
    if(is_clear)
       rl_redisplay();
    is_clear=0;
+}
+
+/* prototype hell differences in various readline versions make it impossible
+ * to use certain functions/variables in C++ */
+
+void lftp_rl_set_ignore_some_completions_function(int (*func)(char**))
+{
+   rl_ignore_some_completions_function=func;
+}
+
+char **lftp_rl_completion_matches(const char *text,char *(*compentry)(const char *,int))
+{
+   return rl_completion_matches(text,compentry);
+}
+
+void lftp_rl_init(
+   const char *readline_name,
+   char **(*attempted_completion_function)(const char *,int,int),
+   int (*getc_function)(FILE*),
+   const char *completer_quote_characters,
+   const char *completer_word_break_characters,
+   const char *filename_quote_characters,
+   char *(*filename_quoting_function)(char *,int,char *),
+   char *(*filename_dequoting_function)(char *,int),
+   int (*char_is_quoted_p)(char *,int))
+{
+   rl_readline_name                  =readline_name;
+   rl_attempted_completion_function  =attempted_completion_function;
+   rl_getc_function                  =getc_function;
+   rl_completer_quote_characters     =completer_quote_characters;
+   rl_completer_word_break_characters=completer_word_break_characters;
+   rl_filename_quote_characters      =filename_quote_characters;
+   rl_filename_quoting_function      =filename_quoting_function;
+   rl_filename_dequoting_function    =filename_dequoting_function;
+   rl_char_is_quoted_p               =char_is_quoted_p;
+}
+
+void lftp_rl_add_defun(const char *name,int (*func)(int,int),int key)
+{
+   rl_add_defun(name,func,key);
+}
+void lftp_rl_bind(const char *key,const char *func)
+{
+   char *line=alloca(strlen(key)+2+strlen(func)+1);
+   sprintf(line,"%s: %s",key,func);
+   rl_parse_and_bind(line);
 }
